--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "helpers/general_helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
